# trainformer

./: .gitignore  CLAUDE.md  PLAN.md  pyproject.toml
examples/: hyperparameter_sweep.py  llm_finetuning.py  metric_learning.py  multimodal.py  ssl_pretraining.py
plans/: landing-page.md
product-matching/: .gitignore  README.md  requirements.txt  run.py  schedule.sh
product-matching/Notebooks/: .gitignore
product-matching/conf/: .gitignore  config.yaml
product-matching/notes/: popular.csv  timm.csv
product-matching/scripts/: benchmark.py  benchmark.yaml  register_model.py  sagemaker_train.py
product-matching/src/: .gitignore  testing.py  train.py
tests/: conftest.py  test_callbacks.py  test_config.py  test_context.py  test_losses.py  test_retrieval.py  test_sweep.py  test_tasks.py  test_trainer.py  test_types.py
trainformer/: __init__.py  cli.py  config.py  context.py  sweep.py  trainer.py  types.py
trainformer/adapters/: __init__.py  base.py  lora.py
trainformer/callbacks/: __init__.py  base.py  checkpoint.py  early_stopping.py  ema.py  knn.py  lr_finder.py  monitors.py
trainformer/data/: __init__.py  datasets.py  image.py  samplers.py  text.py
trainformer/eval/: __init__.py  classification.py  feature_index.py  generation.py  retrieval.py
trainformer/loggers/: __init__.py  base.py  mlflow.py  tensorboard.py  wandb.py
trainformer/models/: __init__.py
trainformer/tasks/: __init__.py
trainformer/utils/: __init__.py  helpers.py
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: syntax-highlight.ts
(+75 files in other folders)
